@@ -1,3 +1,7 @@
+2010-01-22  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* newsitems.py: New win32 installers release announcement
+
 2010-01-18  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles.src: Add Py-gtktree
